tests/NormalTests/paczka2/big_fuzzy/85530806.err
Error in line 2: A9YVr A582 41,74
Error in line 4: Ad0sD A669 72,4
Error in line 7: 3UB A285 75,1
Error in line 9: A285 S656 92,7
Error in line 17: A285 A669 49,5
Error in line 26: Ad0sD A669 54,6
Error in line 30: A285 A285 82,8
Error in line 37: Bb4U3miep A582 21,8
Error in line 62: Bb4U3miep S656 29,8
Error in line 64: J6EqPElzu A582 64,1
Error in line 95: A285 A669 33,3
Error in line 94: J6EqPElzu A669 16,7
Error in line 106: Ad0sD A66J 133,6
Error in line 103: 3UB S656 98,5
Error in line 115: Ad0sD A669 272,6
Error in line 121: A285 S656 77,2
Error in line 124: yzVxHG6yM S656 25,3
Error in line 131: A9YVr A285 430,5
Error in line 117: Bb4U3miep S656 54,8
Error in line 144: Bb4U3miep A285 11,2
Error in line 158: 3UB A669 99,7
Error in line 161: 3UB A285 55,9
Error in line 164: 3UB S656 78,0
Error in line 162: Bb4U3miep A285 565,8
Error in line 172: A9YVr S656 9,4
Error in line 183: J6EqPElzu A669 66,0
Error in line 182: A9YVr A285 20,6
Error in line 200: A9YVr S656 10,7
Error in line 192: Ad0sD A582 45,4
Error in line 188: 3UB S656 29,3
Error in line 209: J6EqPElzu A285 58,5
Error in line 224: Ad0sD S656 6,47
Error in line 225: J6EqPElzu A285 88,3
Error in line 240: A9YVr A285 55,4
Error in line 246: A285 A669 16,9
Error in line 243: Ad0sD A285 90,1
